@@ -1404,6 +1404,7 @@ __ZN7WebCore9FloatSizeC1ERK6CGSize
 __ZN7WebCore9FloatSizeC1ERKNS_7IntSizeE
 __ZN7WebCore9FontCache10invalidateEv
 __ZN7WebCore9FontCache13fontDataCountEv
+__ZN7WebCore9FontCache17getCachedFontDataERKNS_15FontDescriptionERKN3WTF12AtomicStringEbNS0_12ShouldRetainE
 __ZN7WebCore9FontCache21inactiveFontDataCountEv
 __ZN7WebCore9FontCache21purgeInactiveFontDataEi
 __ZN7WebCore9FontCache29purgeInactiveFontDataIfNeededEv
@@ -2744,7 +2745,6 @@ __ZN7WebCore8Settings23setNetworkInterfaceNameERKN3WTF6StringE
 __ZN7WebCore8Settings31setAudioSessionCategoryOverrideEj
 __ZN7WebCore8Settings34setNetworkDataUsageTrackingEnabledEb
 __ZN7WebCore8Settings38gShouldOptOutOfNetworkStateObservationE
-__ZN7WebCore9FontCache17getCachedFontDataERKNS_15FontDescriptionERKN3WTF12AtomicStringEbNS0_12ShouldRetainE
 __ZN7WebCore9FontCache25getLastResortFallbackFontERKNS_15FontDescriptionENS0_12ShouldRetainE
 __ZN7WebCore9FrameView17setScrollVelocityEdddd
 __ZN7WebCore9FrameView20setWasScrolledByUserEb
